PYEDJO/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    VAR_CHAR
    TRUE
    IFELSE
    FALSE

Grammar

Rule 0     S' -> program
Rule 1     program -> START EDJO VAR_ID SEMICOLON LibreriaT vars_o_espacio tipo_funciones Main
Rule 2     LibreriaT -> FROM TUR IMPORT TURTLE SEMICOLON
Rule 3     vars_o_espacio -> Vars vars_o_espacio
Rule 4     vars_o_espacio -> <empty>
Rule 5     Vars -> Tipo reglas_var SEMICOLON
Rule 6     Tipo -> INT AgregaTipo
Rule 7     Tipo -> DECIMAL AgregaTipo
Rule 8     Tipo -> STRING AgregaTipo
Rule 9     Tipo -> CHAR AgregaTipo
Rule 10    Tipo -> BOOL AgregaTipo
Rule 11    reglas_var -> VAR_ID AgregaVariable pos_vec pos_comma
Rule 12    pos_vec -> SLBRACKET VAR_INT SRBRACKET
Rule 13    pos_vec -> <empty>
Rule 14    pos_comma -> COMMA reglas_var
Rule 15    pos_comma -> <empty>
Rule 16    Exp -> ExpI pos_igual
Rule 17    pos_igual -> ASSIGN ExpI
Rule 18    pos_igual -> <empty>
Rule 19    ExpI -> ExpK pos_Operandos
Rule 20    pos_Operandos -> Operandos ExpI
Rule 21    pos_Operandos -> <empty>
Rule 22    Operandos -> LT
Rule 23    Operandos -> GT
Rule 24    Operandos -> NE
Rule 25    Operandos -> LE
Rule 26    Operandos -> GE
Rule 27    Operandos -> EQ
Rule 28    ExpK -> ExpT pos_SUMRES
Rule 29    pos_SUMRES -> PLUS ExpK
Rule 30    pos_SUMRES -> MINUS ExpK
Rule 31    pos_SUMRES -> <empty>
Rule 32    ExpT -> ExpF pos_MULTDIV
Rule 33    pos_MULTDIV -> MULT ExpT
Rule 34    pos_MULTDIV -> DIV ExpT
Rule 35    pos_MULTDIV -> <empty>
Rule 36    ExpF -> VAR_CTE
Rule 37    ExpF -> LPAREN Exp RPAREN
Rule 38    ExpF -> SLBRACKET Exp SRBRACKET
Rule 39    ExpF -> VAR_ID pos_parens
Rule 40    VAR_CTE -> VAR_INT
Rule 41    VAR_CTE -> VAR_DECIMAL
Rule 42    pos_parens -> LPAREN Exp RPAREN
Rule 43    pos_parens -> SLBRACKET Exp SRBRACKET
Rule 44    pos_parens -> <empty>
Rule 45    tipo_funciones -> Funcs_void tipo_funciones
Rule 46    tipo_funciones -> <empty>
Rule 47    Funcs_void -> CambiarALocal VOID saveFuncTypeVoid VAR_ID saveFuncName LPAREN reg_paren RPAREN LBRACKET vars_o_espacio reg_brack RBRACKET CambiarAGlobal
Rule 48    reg_paren -> param
Rule 49    reg_paren -> <empty>
Rule 50    param -> Tipo VAR_ID addArgument pos_commaf
Rule 51    pos_commaf -> COMMA param
Rule 52    pos_commaf -> <empty>
Rule 53    reg_brack -> Estatutos reg_brack
Rule 54    reg_brack -> <empty>
Rule 55    Estatutos -> Condicion
Rule 56    Estatutos -> Ciclo
Rule 57    Estatutos -> Return
Rule 58    Estatutos -> Exp SEMICOLON
Rule 59    Estatutos -> Print
Rule 60    Estatutos -> Llamada_Func
Rule 61    Estatutos -> TurtleMotion
Rule 62    Condicion -> IF LPAREN Exp RPAREN LBRACKET reg_brack RBRACKET pos_else
Rule 63    pos_else -> ELSE LBRACKET reg_brack RBRACKET
Rule 64    pos_else -> <empty>
Rule 65    Return -> RETURN Exp SEMICOLON
Rule 66    Print -> PRINT LPAREN VAR_STRING RPAREN SEMICOLON
Rule 67    Print -> PRINT LPAREN Exp RPAREN SEMICOLON
Rule 68    Llamada_Func -> VAR_ID LPAREN paramLlam RPAREN SEMICOLON
Rule 69    paramLlam -> Exp pos_commaLlam
Rule 70    pos_commaLlam -> COMMA paramLlam
Rule 71    pos_commaLlam -> <empty>
Rule 72    Ciclo -> For
Rule 73    Ciclo -> While
Rule 74    Ciclo -> DoWhile
Rule 75    While -> WHILE LPAREN Exp RPAREN LBRACKET reg_brack RBRACKET
Rule 76    DoWhile -> DO LBRACKET reg_brack RBRACKET WHILE LPAREN Exp RPAREN SEMICOLON
Rule 77    For -> FOR LPAREN VAR_ID ASSIGN Exp SEMICOLON Exp SEMICOLON VAR_ID Exp_ciclo RPAREN LBRACKET reg_brack RBRACKET
Rule 78    Exp_ciclo -> PLUS VAR_INT
Rule 79    Exp_ciclo -> MINUS VAR_INT
Rule 80    Exp_ciclo -> MULT VAR_INT
Rule 81    Exp_ciclo -> DIV VAR_INT
Rule 82    Exp_ciclo -> PLUSPLUS
Rule 83    Exp_ciclo -> MINUSMINUS
Rule 84    TurtleMotion -> Position
Rule 85    TurtleMotion -> Right
Rule 86    TurtleMotion -> Left
Rule 87    TurtleMotion -> Forward
Rule 88    TurtleMotion -> Circle
Rule 89    Position -> VAR_ID POINT POS LPAREN RPAREN SEMICOLON
Rule 90    Forward -> VAR_ID POINT FORWARD LPAREN Exp RPAREN SEMICOLON
Rule 91    Right -> VAR_ID POINT RIGHT LPAREN Exp RPAREN SEMICOLON
Rule 92    Left -> VAR_ID POINT LEFT LPAREN Exp RPAREN SEMICOLON
Rule 93    Circle -> VAR_ID POINT CIRCLE LPAREN Exp RPAREN SEMICOLON
Rule 94    Main -> MAIN LPAREN RPAREN LBRACKET CambiarALocal vars_o_espacio reg_brack RET ZERO SEMICOLON RBRACKET
Rule 95    AgregaTipo -> <empty>
Rule 96    AgregaVariable -> <empty>
Rule 97    CambiarALocal -> <empty>
Rule 98    CambiarAGlobal -> <empty>
Rule 99    saveFuncTypeVoid -> <empty>
Rule 100   saveFuncName -> <empty>
Rule 101   addArgument -> <empty>

Terminals, with rules where they appear

ASSIGN               : 17 77
BOOL                 : 10
CHAR                 : 9
CIRCLE               : 93
COMMA                : 14 51 70
DECIMAL              : 7
DIV                  : 34 81
DO                   : 76
EDJO                 : 1
ELSE                 : 63
EQ                   : 27
FALSE                : 
FOR                  : 77
FORWARD              : 90
FROM                 : 2
GE                   : 26
GT                   : 23
IF                   : 62
IFELSE               : 
IMPORT               : 2
INT                  : 6
LBRACKET             : 47 62 63 75 76 77 94
LE                   : 25
LEFT                 : 92
LPAREN               : 37 42 47 62 66 67 68 75 76 77 89 90 91 92 93 94
LT                   : 22
MAIN                 : 94
MINUS                : 30 79
MINUSMINUS           : 83
MULT                 : 33 80
NE                   : 24
PLUS                 : 29 78
PLUSPLUS             : 82
POINT                : 89 90 91 92 93
POS                  : 89
PRINT                : 66 67
RBRACKET             : 47 62 63 75 76 77 94
RET                  : 94
RETURN               : 65
RIGHT                : 91
RPAREN               : 37 42 47 62 66 67 68 75 76 77 89 90 91 92 93 94
SEMICOLON            : 1 2 5 58 65 66 67 68 76 77 77 89 90 91 92 93 94
SLBRACKET            : 12 38 43
SRBRACKET            : 12 38 43
START                : 1
STRING               : 8
TRUE                 : 
TUR                  : 2
TURTLE               : 2
VAR_CHAR             : 
VAR_DECIMAL          : 41
VAR_ID               : 1 11 39 47 50 68 77 77 89 90 91 92 93
VAR_INT              : 12 40 78 79 80 81
VAR_STRING           : 66
VOID                 : 47
WHILE                : 75 76
ZERO                 : 94
error                : 

Nonterminals, with rules where they appear

AgregaTipo           : 6 7 8 9 10
AgregaVariable       : 11
CambiarAGlobal       : 47
CambiarALocal        : 47 94
Ciclo                : 56
Circle               : 88
Condicion            : 55
DoWhile              : 74
Estatutos            : 53
Exp                  : 37 38 42 43 58 62 65 67 69 75 76 77 77 90 91 92 93
ExpF                 : 32
ExpI                 : 16 17 20
ExpK                 : 19 29 30
ExpT                 : 28 33 34
Exp_ciclo            : 77
For                  : 72
Forward              : 87
Funcs_void           : 45
Left                 : 86
LibreriaT            : 1
Llamada_Func         : 60
Main                 : 1
Operandos            : 20
Position             : 84
Print                : 59
Return               : 57
Right                : 85
Tipo                 : 5 50
TurtleMotion         : 61
VAR_CTE              : 36
Vars                 : 3
While                : 73
addArgument          : 50
param                : 48 51
paramLlam            : 68 70
pos_MULTDIV          : 32
pos_Operandos        : 19
pos_SUMRES           : 28
pos_comma            : 11
pos_commaLlam        : 69
pos_commaf           : 50
pos_else             : 62
pos_igual            : 16
pos_parens           : 39
pos_vec              : 11
program              : 0
reg_brack            : 47 53 62 63 75 76 77 94
reg_paren            : 47
reglas_var           : 5 14
saveFuncName         : 47
saveFuncTypeVoid     : 47
tipo_funciones       : 1 45
vars_o_espacio       : 1 3 47 94

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . START EDJO VAR_ID SEMICOLON LibreriaT vars_o_espacio tipo_funciones Main

    START           shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> START . EDJO VAR_ID SEMICOLON LibreriaT vars_o_espacio tipo_funciones Main

    EDJO            shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> START EDJO . VAR_ID SEMICOLON LibreriaT vars_o_espacio tipo_funciones Main

    VAR_ID          shift and go to state 4


state 4

    (1) program -> START EDJO VAR_ID . SEMICOLON LibreriaT vars_o_espacio tipo_funciones Main

    SEMICOLON       shift and go to state 5


state 5

    (1) program -> START EDJO VAR_ID SEMICOLON . LibreriaT vars_o_espacio tipo_funciones Main
    (2) LibreriaT -> . FROM TUR IMPORT TURTLE SEMICOLON

    FROM            shift and go to state 6

    LibreriaT                      shift and go to state 7

state 6

    (2) LibreriaT -> FROM . TUR IMPORT TURTLE SEMICOLON

    TUR             shift and go to state 8


state 7

    (1) program -> START EDJO VAR_ID SEMICOLON LibreriaT . vars_o_espacio tipo_funciones Main
    (3) vars_o_espacio -> . Vars vars_o_espacio
    (4) vars_o_espacio -> .
    (5) Vars -> . Tipo reglas_var SEMICOLON
    (6) Tipo -> . INT AgregaTipo
    (7) Tipo -> . DECIMAL AgregaTipo
    (8) Tipo -> . STRING AgregaTipo
    (9) Tipo -> . CHAR AgregaTipo
    (10) Tipo -> . BOOL AgregaTipo

    MAIN            reduce using rule 4 (vars_o_espacio -> .)
    VOID            reduce using rule 4 (vars_o_espacio -> .)
    INT             shift and go to state 10
    DECIMAL         shift and go to state 11
    STRING          shift and go to state 16
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13

    Vars                           shift and go to state 14
    Tipo                           shift and go to state 9
    vars_o_espacio                 shift and go to state 15

state 8

    (2) LibreriaT -> FROM TUR . IMPORT TURTLE SEMICOLON

    IMPORT          shift and go to state 17


state 9

    (5) Vars -> Tipo . reglas_var SEMICOLON
    (11) reglas_var -> . VAR_ID AgregaVariable pos_vec pos_comma

    VAR_ID          shift and go to state 18

    reglas_var                     shift and go to state 19

state 10

    (6) Tipo -> INT . AgregaTipo
    (95) AgregaTipo -> .

    VAR_ID          reduce using rule 95 (AgregaTipo -> .)

    AgregaTipo                     shift and go to state 20

state 11

    (7) Tipo -> DECIMAL . AgregaTipo
    (95) AgregaTipo -> .

    VAR_ID          reduce using rule 95 (AgregaTipo -> .)

    AgregaTipo                     shift and go to state 21

state 12

    (9) Tipo -> CHAR . AgregaTipo
    (95) AgregaTipo -> .

    VAR_ID          reduce using rule 95 (AgregaTipo -> .)

    AgregaTipo                     shift and go to state 22

state 13

    (10) Tipo -> BOOL . AgregaTipo
    (95) AgregaTipo -> .

    VAR_ID          reduce using rule 95 (AgregaTipo -> .)

    AgregaTipo                     shift and go to state 23

state 14

    (3) vars_o_espacio -> Vars . vars_o_espacio
    (3) vars_o_espacio -> . Vars vars_o_espacio
    (4) vars_o_espacio -> .
    (5) Vars -> . Tipo reglas_var SEMICOLON
    (6) Tipo -> . INT AgregaTipo
    (7) Tipo -> . DECIMAL AgregaTipo
    (8) Tipo -> . STRING AgregaTipo
    (9) Tipo -> . CHAR AgregaTipo
    (10) Tipo -> . BOOL AgregaTipo

    MAIN            reduce using rule 4 (vars_o_espacio -> .)
    VOID            reduce using rule 4 (vars_o_espacio -> .)
    IF              reduce using rule 4 (vars_o_espacio -> .)
    RETURN          reduce using rule 4 (vars_o_espacio -> .)
    PRINT           reduce using rule 4 (vars_o_espacio -> .)
    VAR_ID          reduce using rule 4 (vars_o_espacio -> .)
    FOR             reduce using rule 4 (vars_o_espacio -> .)
    WHILE           reduce using rule 4 (vars_o_espacio -> .)
    DO              reduce using rule 4 (vars_o_espacio -> .)
    LPAREN          reduce using rule 4 (vars_o_espacio -> .)
    SLBRACKET       reduce using rule 4 (vars_o_espacio -> .)
    VAR_INT         reduce using rule 4 (vars_o_espacio -> .)
    VAR_DECIMAL     reduce using rule 4 (vars_o_espacio -> .)
    RET             reduce using rule 4 (vars_o_espacio -> .)
    RBRACKET        reduce using rule 4 (vars_o_espacio -> .)
    INT             shift and go to state 10
    DECIMAL         shift and go to state 11
    STRING          shift and go to state 16
    CHAR            shift and go to state 12
    BOOL            shift and go to state 13

    Tipo                           shift and go to state 9
    Vars                           shift and go to state 14
    vars_o_espacio                 shift and go to state 24

state 15

    (1) program -> START EDJO VAR_ID SEMICOLON LibreriaT vars_o_espacio . tipo_funciones Main
    (45) tipo_funciones -> . Funcs_void tipo_funciones
    (46) tipo_funciones -> .
    (47) Funcs_void -> . CambiarALocal VOID saveFuncTypeVoid VAR_ID saveFuncName LPAREN reg_paren RPAREN LBRACKET vars_o_espacio reg_brack RBRACKET CambiarAGlobal
    (97) CambiarALocal -> .

    MAIN            reduce using rule 46 (tipo_funciones -> .)
    VOID            reduce using rule 97 (CambiarALocal -> .)

    CambiarALocal                  shift and go to state 26
    tipo_funciones                 shift and go to state 25
    Funcs_void                     shift and go to state 27

state 16

    (8) Tipo -> STRING . AgregaTipo
    (95) AgregaTipo -> .

    VAR_ID          reduce using rule 95 (AgregaTipo -> .)

    AgregaTipo                     shift and go to state 28

state 17

    (2) LibreriaT -> FROM TUR IMPORT . TURTLE SEMICOLON

    TURTLE          shift and go to state 29


state 18

    (11) reglas_var -> VAR_ID . AgregaVariable pos_vec pos_comma
    (96) AgregaVariable -> .

    SLBRACKET       reduce using rule 96 (AgregaVariable -> .)
    COMMA           reduce using rule 96 (AgregaVariable -> .)
    SEMICOLON       reduce using rule 96 (AgregaVariable -> .)

    AgregaVariable                 shift and go to state 30

state 19

    (5) Vars -> Tipo reglas_var . SEMICOLON

    SEMICOLON       shift and go to state 31


state 20

    (6) Tipo -> INT AgregaTipo .

    VAR_ID          reduce using rule 6 (Tipo -> INT AgregaTipo .)


state 21

    (7) Tipo -> DECIMAL AgregaTipo .

    VAR_ID          reduce using rule 7 (Tipo -> DECIMAL AgregaTipo .)


state 22

    (9) Tipo -> CHAR AgregaTipo .

    VAR_ID          reduce using rule 9 (Tipo -> CHAR AgregaTipo .)


state 23

    (10) Tipo -> BOOL AgregaTipo .

    VAR_ID          reduce using rule 10 (Tipo -> BOOL AgregaTipo .)


state 24

    (3) vars_o_espacio -> Vars vars_o_espacio .

    IF              reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    RETURN          reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    PRINT           reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    VAR_ID          reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    FOR             reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    WHILE           reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    DO              reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    LPAREN          reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    SLBRACKET       reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    VAR_INT         reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    VAR_DECIMAL     reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    RBRACKET        reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    MAIN            reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    VOID            reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)
    RET             reduce using rule 3 (vars_o_espacio -> Vars vars_o_espacio .)


state 25

    (1) program -> START EDJO VAR_ID SEMICOLON LibreriaT vars_o_espacio tipo_funciones . Main
    (94) Main -> . MAIN LPAREN RPAREN LBRACKET CambiarALocal vars_o_espacio reg_brack RET ZERO SEMICOLON RBRACKET

    MAIN            shift and go to state 32

    Main                           shift and go to state 33

state 26

    (47) Funcs_void -> CambiarALocal . VOID saveFuncTypeVoid VAR_ID saveFuncName LPAREN reg_paren RPAREN LBRACKET vars_o_espacio reg_brack RBRACKET CambiarAGlobal

    VOID            shift and go to state 34


state 27

    (45) tipo_funciones -> Funcs_void . tipo_funciones
    (45) tipo_funciones -> . Funcs_void tipo_funciones
    (46) tipo_funciones -> .
    (47) Funcs_void -> . CambiarALocal VOID saveFuncTypeVoid VAR_ID saveFuncName LPAREN reg_paren RPAREN LBRACKET vars_o_espacio reg_brack RBRACKET CambiarAGlobal
    (97) CambiarALocal -> .

    MAIN            reduce using rule 46 (tipo_funciones -> .)
    VOID            reduce using rule 97 (CambiarALocal -> .)

    CambiarALocal                  shift and go to state 26
    tipo_funciones                 shift and go to state 35
    Funcs_void                     shift and go to state 27

state 28

    (8) Tipo -> STRING AgregaTipo .

    VAR_ID          reduce using rule 8 (Tipo -> STRING AgregaTipo .)


state 29

    (2) LibreriaT -> FROM TUR IMPORT TURTLE . SEMICOLON

    SEMICOLON       shift and go to state 36


state 30

    (11) reglas_var -> VAR_ID AgregaVariable . pos_vec pos_comma
    (12) pos_vec -> . SLBRACKET VAR_INT SRBRACKET
    (13) pos_vec -> .

    SLBRACKET       shift and go to state 37
    COMMA           reduce using rule 13 (pos_vec -> .)
    SEMICOLON       reduce using rule 13 (pos_vec -> .)

    pos_vec                        shift and go to state 38

state 31

    (5) Vars -> Tipo reglas_var SEMICOLON .
